RM-1797 (RM header isn't big enough)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@93178 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -15,8 +15,8 @@ page.rmDispositionEdit.title=Edit Disposition Schedule
 page.rmDispositionEdit.description=Page for editing the disposition schedule
 page.rmPermissions.title=Manage Permissions
 page.rmPermissions.description=Page for managing permissions
-page.rmConsole.title=Records Management Console
-page.rmConsole.description=Records Management Administration Console
+page.rmConsole.title=RM Admin Tools
+page.rmConsole.description=Records Management Administration Tools
 
 ## Record Container Details Pages
 page.rmRecordSeriesDetails.title=Record Series Details
@@ -417,7 +417,7 @@ customise.reject.text=Reject records with comment ''{param.reason}''
 customise.requestInfo.text=Creates a workflow task for a list of specified people and requests the following info ''{param.requestedInfo}''
 customise.sendEmail.text=Send email with subject ''{param.subject}'' to specified recipients
 
-## Records Management Console
+## Records Management Admin Tools
 header.rm-console.label=Records Management...
 header.rm-management.label=Management Console
 header.rm-management.description=Management Console
