--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
    <groupId>org.alfresco</groupId>
    <artifactId>alfresco-rm-parent</artifactId>
    <packaging>pom</packaging>
-   <version>2.3.c</version>
+   <version>2.3.c-SNAPSHOT</version>
    <name>Alfresco Records Management</name>
 
    <url>http://www.alfresco.org/</url>
