RM-1828 (Labels for several indicators are missing)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@93336 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -250,6 +250,11 @@ status.rm-recorded-version-history-all-revisions=All revisions will be recorded
 status.rm-recorded-version-history-major-revisions=Only major revisions will be recorded
 # Exif
 status.exif=EXIF metadata available
+status.geographic=Geolocation metadata available
+status.dod5015-digital-photograph-record=Digital Photograph Record
+status.dod5015-pdf-record=Pdf Record
+status.dod5015-scanned-record=Scanned Record
+status.dod5015-web-record=Web Record
 
 # RMA model metadata fields
 label.all=All
