RM-1833 (Label for "Add Relationship" is incorrect)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@93776 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -150,7 +150,7 @@ actions.remove-from-hold=Remove from Hold
 actions.file-hold-report=Generate Hold Report
 actions.move-dm-record=Move Record
 actions.recorded-version-config=Auto-Declare Options
-actions.add-relationship=Add relationship
+actions.add-relationship=Add Relationship
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
