Changed some of the strings (after feedback from the Docs team)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97465 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -79,8 +79,8 @@ message.confirm.destroyMultiple=Are you sure you want to destroy the {0} selecte
 message.confirm2.destroy.title=Destroy Confirmation
 message.confirm2.destroy=The content for the file will be permanently deleted, are you sure you want to continue?
 message.confirm2.destroyMultiple=The content for the files will be permanently deleted, are you sure you want to continue?
-message.confirm.hide.record.title=Hide record
-message.confirm.hide.record=You are hiding the record and will not be able to see this record within your collaboration site anymore.
+message.confirm.hide.record.title=Hide Record
+message.confirm.hide.record=This file has been made a record. Click OK to hide it so it can't be seen here.
 message.select=Select...
 message.pdf-record-fonts.title=PDF Records: Embedded Font Check
 message.pdf-record-fonts.accession=Check that any PDF records just accessioned include the applicable embedded fonts.
@@ -91,7 +91,7 @@ message.request-info-failure=An error occurred whilst requesting information
 message.confirm.delete-hold.title=Delete Hold
 message.confirm.delete-hold=Are you sure you want to delete ''{0}''?
 message.confirm.close-rejected-record.title=Confirm
-message.confirm.close-rejected-record=Are you sure you want to remove the rejected record warning?
+message.confirm.close-rejected-record=Are you sure you want to remove the rejected record warning. Once removed the options to declare the file as a record will be available again.
 message.confirm.unlink.title=Unlink Confirmation
 message.confirm.unlink.text=Are you sure you want to unlink the record?
 
@@ -137,7 +137,7 @@ actions.upload-new-version=Upload New Version
 actions.view-details=View Details
 actions.view-audit-log=View Audit Log
 actions.create-record=Declare as Record
-actions.declare-as-version-record=Declare as Version Record
+actions.declare-as-version-record=Declare Version as Record
 actions.hide-record=Hide Record
 actions.reject=Reject
 actions.request-info=Request Information
@@ -197,7 +197,7 @@ message.undo-cutoff.failure=Couldn't undo cut off for ''{0}''
 message.undo-cutoff.success=Undo cut off on ''{0}''
 message.create-disposition-schedule.failure=Couldn't create disposition schedule for ''{0}''
 message.create-disposition-schedule.success=Disposition schedule for ''{0}'' created
-message.create-record.success=Successfully declared as record
+message.create-record.success=This file has been made a record and has limited actions available
 message.create-record.failure=Couldn't declare as record
 message.hide-record.success=Record ''{0}'' successfully hidden
 message.hide-record.failure=Couldn't hide record ''{0}''
@@ -481,4 +481,4 @@ file-to.substitution.date.year.week.label=Week of Year (e.g. 31)
 
 ## Banner icon messages
 banner.rejected-record.info=See information about the rejected record
-banner.rejected-record.close=Remove the rejected warning recording
+banner.rejected-record.close=Remove the rejected record warning
