--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get.properties
@@ -1,4 +1,4 @@
-label.list.no.data.message=There are not any relationships defined
+label.list.no.data.message=There aren't any relationships defined yet
 label.toolbar.relationships=Relationships
 label.button.new-relationship=Add New Relationship
 label.confirmation.title.delete-relationship=Delete Relationship
