--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get.properties
@@ -1,6 +1,6 @@
 label.list.no.data.message=There aren't any relationships defined yet
 label.toolbar.relationships=Relationships
-label.button.new-relationship=Add New Relationship
+label.button.new-relationship=Add Relationship
 label.confirmation.title.delete-relationship=Delete Relationship
 label.confirmationPrompt.delete-relationship=Are you sure you want to delete '{node.properties.cm:name}'?
 label.delete-relationship=Delete Relationship
