RM-1967 (Incorrect message is shown when declare version as record)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@97592 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -199,6 +199,8 @@ message.create-disposition-schedule.failure=Couldn't create disposition schedule
 message.create-disposition-schedule.success=Disposition schedule for ''{0}'' created
 message.create-record.success=This file has been made a record and has limited actions available
 message.create-record.failure=Couldn't declare as record
+message.declare-version-as-record.success=This version of the file has been declared as record
+message.declare-version-as-record.failure=Couldn't declare version as record
 message.hide-record.success=Record ''{0}'' successfully hidden
 message.hide-record.failure=Couldn't hide record ''{0}''
 message.reject.reason=Reason:
