--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -91,7 +91,7 @@ message.request-info-failure=An error occurred whilst requesting information
 message.confirm.delete-hold.title=Delete Hold
 message.confirm.delete-hold=Are you sure you want to delete ''{0}''?
 message.confirm.close-rejected-record.title=Confirm
-message.confirm.close-rejected-record=Are you sure you want to remove the rejected record warning. Once removed the options to declare the file as a record will be available again.
+message.confirm.close-rejected-record=Are you sure you want to remove the rejected record warning? Once removed, the options to declare the file as a record will be available again.
 message.confirm.unlink.title=Unlink Confirmation
 message.confirm.unlink.text=Are you sure you want to unlink the record?
 
