--- a/build.xml
+++ b/build.xml
@@ -106,4 +106,6 @@
       </condition>
       <antcall target="copyWebDirectory"></antcall>
    </target>
+
+   <target name="unitTest" />
 </project>
