--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
       <!-- Maven specific build properties -->
       <maven.alfresco.includeDependencies>false</maven.alfresco.includeDependencies>
       <maven.build.sourceVersion>1.7</maven.build.sourceVersion>
+      <maven.build.testSourceVersion>1.8</maven.build.testSourceVersion>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <argLine>-Xmx1024m -XX:MaxPermSize=256m -Duser.language=en -Dcom.sun.management.jmxremote</argLine>
    </properties>
@@ -115,7 +116,7 @@
                   <configuration>
                      <rules>
                         <requireJavaVersion>
-                           <version>1.7.0</version>
+                           <version>1.8</version>
                         </requireJavaVersion>
                      </rules>
                   </configuration>
@@ -144,11 +145,24 @@
             </plugin>
             <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
-               <version>3.1</version>
+               <version>3.2</version>
                <configuration>
                   <source>${maven.build.sourceVersion}</source>
                   <target>${maven.build.sourceVersion}</target>
                </configuration>
+               <executions>
+                  <execution>
+                     <id>default-testCompile</id>
+                     <phase>process-test-sources</phase>
+                     <goals>
+                        <goal>testCompile</goal>
+                     </goals>
+                     <configuration>
+                        <source>${maven.build.testSourceVersion}</source>
+                        <target>${maven.build.testSourceVersion}</target>
+                     </configuration>
+                  </execution>
+               </executions>
             </plugin>
             <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
