RM-2019 (Testing maven SDK evaluation)    * Fixed incremental build    * Fixed dependency inclusion
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@99375 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.xml
+++ b/build.xml
@@ -93,8 +93,8 @@
 
    <target name="incrementalBuild" depends="package, unitTest" description="">
       <xmlproperty file="pom.xml" keepRoot="false"/>
-      <copy file="${ant.build.directory}/${artifactId}-${parent.version}.jar" tofile="${ant.build.directory}/${artifactId}-${parent.version}-amp.jar" failonerror="true" />
-      <move file="${ant.build.directory}/${artifactId}-${parent.version}-amp.jar" todir="${app.folder}/WEB-INF/lib" failonerror="true" />
+      <copy file="${ant.build.directory}/${artifactId}.jar" tofile="${ant.build.directory}/${artifactId}-amp.jar" failonerror="true" />
+      <move file="${ant.build.directory}/${artifactId}-amp.jar" todir="${app.folder}/WEB-INF/lib" failonerror="true" />
       <copy todir="${app.folder}/WEB-INF/classes" failonerror="true">
          <fileset dir="${ant.config.directory}">
             <exclude name="**/module.properties" />
