Minification step has been extracted to a separate profile
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@99523 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -84,6 +84,20 @@
                      </execution>
                   </executions>
                </plugin>
+            </plugins>
+         </build>
+      </profile>
+      <profile>
+         <id>minify-js</id>
+         <activation>
+            <activeByDefault>true</activeByDefault>
+            <property>
+               <name>minifyjs</name>
+               <value>true</value>
+            </property>
+         </activation>
+         <build>
+            <plugins>
                <plugin>
                   <groupId>net.alchim31.maven</groupId>
                   <artifactId>yuicompressor-maven-plugin</artifactId>
