Extracted the property for minification in to the build.properties file
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@99525 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.properties
+++ b/build.properties
@@ -20,3 +20,6 @@ app.tomcat.webapps=${app.tomcat.folder}/webapps
 app.folder=${app.tomcat.webapps}/${app.war.artifactId}
 app.package=${app.war.artifactId}.${app.war.packaging}
 app.package.path=${app.tomcat.webapps}/${app.package}
+
+# Controls the minification process of js files
+minifyjs=false
