Aikau dependency changes were not reflected in the RM project
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@99531 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.xml
+++ b/build.xml
@@ -76,6 +76,15 @@
       <copy todir="${app.folder}" failonerror="true">
          <fileset dir="${ant.source.web.directory}" />
       </copy>
+      <xmlproperty file="../pom.xml" keepRoot="false"/>
+      <exec executable="${mvn.exec}" failonerror="true">
+         <arg value="dependency:get" />
+         <arg value="-DgroupId=${groupId}" />
+         <arg value="-DartifactId=aikau" />
+         <arg value="-Dversion=${alfresco.aikau.version}" />
+         <arg value="-Dpackaging=jar" />
+         <arg value="-Ddest=${app.folder}/WEB-INF/lib/" />
+      </exec>
    </target>
 
    <target name="package">
