--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -17,7 +17,7 @@
       <maven.tomcat.port>8081</maven.tomcat.port>
       <webapp.id.name>share</webapp.id.name>
       <webapp.id>${webapp.id.name}</webapp.id>
-      <alfresco.aikau.version>1.0.9-SNAPSHOT</alfresco.aikau.version>
+      <alfresco.aikau.version>1.0.10-SNAPSHOT</alfresco.aikau.version>
    </properties>
    <build>
       <sourceDirectory>source/java</sourceDirectory>
@@ -153,7 +153,7 @@
          <type>war</type>
          <scope>provided</scope>
       </dependency>
-      <!--Uncomment this to upgrade Aikau dependency: (requires ${alfresco.base.version} >= 5.0.1 )
+      <!--Uncomment this to upgrade Aikau dependency: (requires ${alfresco.base.version} >= 5.0.1 )  -->
       <dependency>
          <groupId>org.alfresco</groupId>
          <artifactId>aikau</artifactId>
@@ -164,7 +164,7 @@
                <artifactId>*</artifactId>
             </exclusion>
          </exclusions>
-      </dependency>  -->
+      </dependency>
       <!--  Test Dependencies -->
       <dependency>
          <groupId>junit</groupId>
