RM-2078: Classify Document Action, also includes work for RM-2052 +review RM @taksoy
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@100800 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -70,7 +70,7 @@ label.menu.custom=Custom Properties
 button.reject.record=Reject Record
 button.request-info=Request Information
 
-## Pop-up Messages
+##ï¿½Pop-up Messages
 message.confirm.delete.title=Delete Confirmation
 message.confirm.delete=Are you sure you want to delete ''{0}''?
 message.confirm.destroy.title=Destroy Confirmation
@@ -151,6 +151,7 @@ actions.file-hold-report=Generate Hold Report
 actions.move-dm-record=Move Record
 actions.recorded-version-config=Auto-Declare Options
 actions.add-relationship=Add Relationship
+actions.classify-document=Classify
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
