amp files were missing in the bamboo builds
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@101040 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,13 @@
          <plugin>
             <groupId>org.alfresco.maven.plugin</groupId>
             <artifactId>alfresco-maven-plugin</artifactId>
+            <executions>
+               <execution>
+                  <goals>
+                     <goal>amp</goal>
+                  </goals>
+               </execution>
+            </executions>
             <extensions>true</extensions>
             <configuration>
                <backup>true</backup>
