--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -55,6 +55,17 @@
          <build>
             <plugins>
                <plugin>
+                  <groupId>org.alfresco.maven.plugin</groupId>
+                  <artifactId>alfresco-maven-plugin</artifactId>
+                  <executions>
+                     <execution>
+                        <goals>
+                           <goal>amp</goal>
+                        </goals>
+                     </execution>
+                  </executions>
+               </plugin>
+               <plugin>
                   <artifactId>maven-antrun-plugin</artifactId>
                   <executions>
                      <execution>
