RM-1842 (View users security clearance)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@101590 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -316,7 +316,7 @@ label.dod.captureDate=Capture Date
 label.dod.contact=Contact
 label.dod.contentManagementSystem=Content Management System
 
-# Admin Console tools
+# RM Admin Console tools
 tool.rm-define-roles.label=Define Roles
 tool.rm-define-roles.description=Create and edit roles
 tool.rm-custom-metadata.label=Custom Metadata
@@ -335,6 +335,11 @@ tool.rm-user-rights.label=User Rights Report
 tool.rm-user-rights.description=User rights report
 tool.rm-users-and-groups.label=Users and Groups
 tool.rm-users-and-groups.description=Users and groups
+
+# Admin Console tools
+tool.group.classification=Classification
+tool.classification-levels.label=Classification Levels
+tool.classification-levels.description=Classification Levels tools
 
 ## Buttons
 button.sort.ascending=Sort Ascending
