--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -251,6 +251,8 @@ status.rm-version-record=Version Record
 ## Document Library Status Indicators
 status.rm-recorded-version-history-all-revisions=All revisions will be recorded
 status.rm-recorded-version-history-major-revisions=Only major revisions will be recorded
+## Classification
+status.rm-classified=Classified
 # Exif
 status.exif=EXIF metadata available
 status.geographic=Geolocation metadata available
