RM-2064 (Add classified indicator to document library browse view) RM-2065 (Add classified indicator to record library browse view)  * Separated classified document and classified record indicators/evaluators
+review RM-26

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@101982 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -252,7 +252,8 @@ status.rm-version-record=Version Record
 status.rm-recorded-version-history-all-revisions=All revisions will be recorded
 status.rm-recorded-version-history-major-revisions=Only major revisions will be recorded
 ## Classification
-status.rm-classified=Classified
+status.rm-classified-record=Classified record
+status.rm-classified-document=Classified document
 # Exif
 status.exif=EXIF metadata available
 status.geographic=Geolocation metadata available
