RM-2061 (Add classification properties to document details view) RM-2062 (Add classification properties to record details view)
+review RM

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@102162 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -36,6 +36,7 @@ label.set.vitalRecord=Vital Record
 label.set.disposition=Disposition Schedule
 label.set.customMetadata=Custom Properties
 label.set.recordVersion=Record Version
+label.set.classification=Classification
 label.hold.reason=Reason
 label.hold.delete.empty=Delete Hold When Empty
 label.recordLevelDisposition=Applied to
@@ -57,6 +58,10 @@ label.file=File
 label.box=Box
 label.versionDescription=Version Description
 label.VersionLabel=Version Label
+label.initialClassification=Initial Classification
+label.currentClassification=Current Classification
+label.classificationAuthority=Classification Authority
+label.classificationReasons=Reason(s) for Classification
 
 ## Common Property Selector
 label.menu.content=Content
