RM-2115: WIP: Add Security Clearance Admin Console.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@102421 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -348,6 +348,8 @@ tool.rm-users-and-groups.description=Users and groups
 tool.group.classification=Classification
 tool.classification-levels.label=Classification Levels
 tool.classification-levels.description=Classification Levels tools
+tool.security-clearance.label=Security Clearance
+tool.security-clearance.description=Security Clearance tools
 
 ## Buttons
 button.sort.ascending=Sort Ascending
