--- a/rm-ui-tests/pom.xml
+++ b/rm-ui-tests/pom.xml
@@ -3,7 +3,7 @@
    <parent>
       <groupId>org.alfresco</groupId>
       <artifactId>alfresco-rm-parent</artifactId>
-      <version>2.2-SNAPSHOT</version>
+      <version>2.2.1.1</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>alfresco-rm-ui-tests</artifactId>
