RM-2115 (View Security Clearance UI)
+review RM

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@103360 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/components/console/classification/security-clearance.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/components/console/classification/security-clearance.get.properties
@@ -1,2 +1,3 @@
-clearance.filter.placeholder=name
-clearance.filter.label=Filter by user name:
+clearance.filter.placeholder=Start typing to filter
+clearance.filter.label=Filter:
+clearance.list.no.data.message=Could not find any user(s) for the given filter
