RM-2115 (View Security Clearance UI)
+review RM-44

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@103428 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/components/console/classification/security-clearance.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/components/console/classification/security-clearance.get.properties
@@ -1,3 +1,6 @@
 clearance.filter.placeholder=Start typing to filter
 clearance.filter.label=Filter:
 clearance.list.no.data.message=Could not find any user(s) for the given filter
+security-clearance.page.title=Security Clearance
+header.cell.user.name=User Name
+header.cell.security.clearance=Security Clearance
