--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -187,5 +187,10 @@
          <artifactId>mockito-all</artifactId>
          <scope>test</scope>
       </dependency>
+      <dependency>
+      	<groupId>commons-logging</groupId>
+		<artifactId>commons-logging</artifactId>
+		<version>1.2</version>
+	   </dependency>      
    </dependencies>
 </project>
