RM-2259: UI Copy updates following review. +review @ahealey
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@105403 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -258,7 +258,7 @@ status.rm-recorded-version-history-all-revisions=All revisions will be recorded
 status.rm-recorded-version-history-major-revisions=Only major revisions will be recorded
 ## Classification
 status.rm-classified-record=Classified record
-status.rm-classified-document=Classified document
+status.rm-classified-document=Classified file
 # Exif
 status.exif=EXIF metadata available
 status.geographic=Geolocation metadata available
@@ -347,9 +347,9 @@ tool.rm-users-and-groups.description=Users and groups
 # Admin Console tools
 tool.group.classification=Classification
 tool.classification-levels.label=Classification Levels
-tool.classification-levels.description=Classification Levels tools
+tool.classification-levels.description=Classification Levels
 tool.security-clearance.label=Security Clearance
-tool.security-clearance.description=Security Clearance tools
+tool.security-clearance.description=Security Clearance
 
 ## Buttons
 button.sort.ascending=Sort Ascending
