--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/components/console/classification/security-clearance.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/components/console/classification/security-clearance.get.properties
@@ -1,6 +1,6 @@
 clearance.filter.placeholder=Start typing to filter
-clearance.filter.label=Filter:
-clearance.list.no.data.message=Could not find any user(s) for the given filter
+clearance.filter.label=Filter Users:
+clearance.list.no.data.message=No matching users were found. Try changing your search criteria
 security-clearance.page.title=Security Clearance
 header.cell.user.name=User Name
 header.cell.security.clearance=Security Clearance
