RM-2247 (Add classification banner to document details) RM-2248 (Add classification banner to record details)
+review RM

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@105441 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -500,3 +500,4 @@ file-to.substitution.date.year.week.label=Week of Year (e.g. 31)
 ## Banner icon messages
 banner.rejected-record.info=See information about the rejected record
 banner.rejected-record.close=Remove the rejected record warning
+banner.classification.info=Classification
