--- a/l10n.properties
+++ b/l10n.properties
@@ -1,4 +1,4 @@
 # Localisation config overrides for Records Management module
 MESSAGE_SEARCH_PATH="rm-server/config rm-share/config"
-EXCLUDED_FILES="$EXCLUDED_FILES rm-method-security.properties"
+EXCLUDED_FILES="$EXCLUDED_FILES rm-method-security.properties springloaded.properties"
 EXTENSION_PREFIX=-RM
