Clean up unnecessary translation
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@105742 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/l10n.properties
+++ b/l10n.properties
@@ -1,4 +1,4 @@
 # Localisation config overrides for Records Management module
 MESSAGE_SEARCH_PATH="rm-server/config rm-share/config"
-EXCLUDED_FILES="$EXCLUDED_FILES rm-method-security.properties springloaded.properties"
+EXCLUDED_FILES="$EXCLUDED_FILES rm-method-security.properties springloaded.properties file-mapping.properties"
 EXTENSION_PREFIX=-RM
