RM-2333. Rename ClassificationAuthority to ClassificationAgency. +review RM This addresses parts of RM-2341, RM-2342, RM-2343 and RM-2344. It replaces authority with agency in the content model , the services and their APIs, the UI layer and the rm-automation tests.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107108 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -60,7 +60,7 @@ label.versionDescription=Version Description
 label.VersionLabel=Version Label
 label.initialClassification=Initial Classification
 label.currentClassification=Current Classification
-label.classificationAuthority=Classification Authority
+label.classificationAgency=Classification Agency
 label.classificationReasons=Reason(s) for Classification
 
 ## Common Property Selector
