--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -60,6 +60,7 @@ label.versionDescription=Version Description
 label.VersionLabel=Version Label
 label.initialClassification=Initial Classification
 label.currentClassification=Current Classification
+label.classifiedBy=Classified By
 label.classificationAgency=Classification Agency
 label.classificationReasons=Reason(s) for Classification
 
