rm-automation has been added to the list of modules in the parent pom
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@108151 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
    <modules>
       <module>rm-server</module>
       <module>rm-share</module>
+      <module>rm-automation</module>
    </modules>
 
    <properties>
