RM-2411 (Add edit classification action)
+review RM @rwetherall @dwebster

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@108678 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -158,6 +158,7 @@ actions.move-dm-record=Move Record
 actions.recorded-version-config=Auto-Declare Options
 actions.add-relationship=Add Relationship
 actions.classify-content=Classify
+actions.edit-classified-content=Edit Classification
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
