RM-2448 (Extend classified document properties view) RM-2449 (Extend classified record properties view)
+review RM

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@108958 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -63,6 +63,16 @@ label.currentClassification=Current Classification
 label.classifiedBy=Classified By
 label.classificationAgency=Classification Agency
 label.classificationReasons=Reason(s) for Classification
+label.downgradeDate=Downgrade date
+label.downgradeEvent=Downgrade event
+label.downgradeInstructions=Downgrade instructions
+label.declassificationDate=Declassification date
+label.declassificationEvent=Declassification event
+label.declassificationExemptions=Declassification exemptions
+label.lastReclassifyBy=Last reclassify by
+label.lastReclassifyAt=Last reclassify at
+label.lastReclassifyReason=Last reclassify reason
+label.lastReclassificationAction=Last reclassification action
 
 ## Common Property Selector
 label.menu.content=Content
