--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -63,16 +63,16 @@ label.currentClassification=Current Classification
 label.classifiedBy=Classified By
 label.classificationAgency=Classification Agency
 label.classificationReasons=Reason(s) for Classification
-label.downgradeDate=Downgrade date
-label.downgradeEvent=Downgrade event
-label.downgradeInstructions=Downgrade instructions
-label.declassificationDate=Declassification date
-label.declassificationEvent=Declassification event
-label.declassificationExemptions=Declassification exemptions
-label.lastReclassifyBy=Last reclassify by
-label.lastReclassifyAt=Last reclassify at
-label.lastReclassifyReason=Last reclassify reason
-label.lastReclassificationAction=Last reclassification action
+label.downgradeDate=Downgrade Date
+label.downgradeEvent=Downgrade Event
+label.downgradeInstructions=Downgrade Instructions
+label.declassificationDate=Declassification Date
+label.declassificationEvent=Declassification Event
+label.declassificationExemptions=Declassification Exemptions
+label.lastReclassifyBy=Last Reclassified By
+label.lastReclassifyAt=Last Reclassificaton Date
+label.lastReclassifyReason=Last Reclassification Reason
+label.lastReclassificationAction=Last Reclassification Action
 
 ## Common Property Selector
 label.menu.content=Content
