RM-2451 - fix typo
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@109916 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -70,7 +70,7 @@ label.declassificationDate=Declassification Date
 label.declassificationEvent=Declassification Event
 label.declassificationExemptions=Declassification Exemptions
 label.lastReclassifyBy=Last Reclassified By
-label.lastReclassifyAt=Last Reclassificaton Date
+label.lastReclassifyAt=Last Reclassification Date
 label.lastReclassifyReason=Last Reclassification Reason
 label.lastReclassificationAction=Last Reclassification Action
 
