--- a/rm-ui-tests/pom.xml
+++ b/rm-ui-tests/pom.xml
@@ -3,12 +3,12 @@
    <parent>
       <groupId>org.alfresco</groupId>
       <artifactId>alfresco-rm-parent</artifactId>
-      <version>2.2.1.2-SNAPSHOT</version>
+      <version>2.2.1.3</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>alfresco-rm-ui-tests</artifactId>
    <properties>
-      <dependency.share.po.version>4.2.2-SNAPSHOT</dependency.share.po.version>
+      <dependency.share.po.version>4.2.5-SNAPSHOT</dependency.share.po.version>
    </properties>
    <build>
       <plugins>
