--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
    </modules>
 
    <properties>
-      <alfresco.version>5.1.c-EA</alfresco.version>
+      <alfresco.version>5.1.b-EA</alfresco.version>
       <app.war.location>${project.build.directory}/${webapp.id.name}.war</app.war.location>
       <alfresco.base.version>${alfresco.version}</alfresco.base.version>
 
