--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -484,3 +484,6 @@ file-to.substitution.date.year.week.label=Week of Year (e.g. 31)
 ## Banner icon messages
 banner.rejected-record.info=See information about the rejected record
 banner.rejected-record.close=Remove the rejected record warning
+
+## Recordable Versions
+label.destroyed-version=Version Destroyed
