Review RM-223 feedback
 * relates to RM-2562



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@119692 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -487,3 +487,4 @@ banner.rejected-record.close=Remove the rejected record warning
 
 ## Recordable Versions
 label.destroyed-version=Version Destroyed
+label.recorded-version=Recorded Version
