Fixed rm-community build process

--- a/rm-community/build.properties
+++ b/rm-community/build.properties
@@ -13,7 +13,7 @@ ant.config.directory=config
 ant.source.web.directory=source/web
 
 # Tomcat properties
-app.tomcat.folder=${ant.build.directory}/../../../software/${app.tomcat}
+app.tomcat.folder=${ant.build.directory}/../../../../software/${app.tomcat}
 app.tomcat.webapps=${app.tomcat.folder}/webapps
 
 # Application properties
