--- a/rm-community/pom.xml
+++ b/rm-community/pom.xml
@@ -1,32 +1,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.alfresco</groupId>
    <artifactId>alfresco-rm-parent</artifactId>
    <packaging>pom</packaging>
    <version>2.4-SNAPSHOT</version>
    <name>Alfresco Records Management</name>
+
    <parent>
       <groupId>org.alfresco.maven</groupId>
       <artifactId>alfresco-sdk-parent</artifactId>
-      <version>2.0.0</version>
+      <version>2.1.1</version>
    </parent>
+
    <url>http://www.alfresco.org/</url>
    <inceptionYear>2005</inceptionYear>
    <organization>
       <name>Alfresco Software</name>
       <url>http://www.alfresco.org/</url>
    </organization>
+
    <licenses>
       <license>
          <name>LGPL 3</name>
       </license>
    </licenses>
+
    <scm>
-      <connection>https://svn.alfresco.com/repos/alfresco-open-mirror/modules/recordsmanagement/HEAD</connection>
-      <developerConnection>https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD</developerConnection>
-      <url>https://fisheye.alfresco.com/changelog/alfresco-enterprise</url>
+      <connection>https://gitlab.alfresco.com/records-management/records-management.git</connection>
    </scm>
+
    <issueManagement>
       <system>JIRA</system>
       <url>https://issues.alfresco.com/jira/browse/RM</url>
@@ -37,13 +41,18 @@
    </ciManagement>
 
    <prerequisites>
-      <maven>3.0.4</maven>
+      <maven>3.2.5</maven>
    </prerequisites>
 
    <repositories>
       <repository>
          <id>alfresco-internal</id>
          <url>https://artifacts.alfresco.com/nexus/content/groups/private</url>
+      </repository>
+      <!-- We need this repository as 5.1 is not released yet. Once it is released we can delete this repository configuration. -->
+      <repository>
+         <id>alfresco-internal-staging</id>
+         <url>https://artifacts.alfresco.com/nexus/content/repositories/5.1-EA</url>
       </repository>
    </repositories>
    <pluginRepositories>
@@ -64,8 +73,14 @@
       </snapshotRepository>
    </distributionManagement>
 
+   <!-- Here we realize the connection with the Alfresco selected platform (e.g.version and edition) -->
    <dependencyManagement>
       <dependencies>
+         <!--
+            This will import the dependencyManagement for all artifacts in the selected Alfresco version/edition
+            (see http://maven.apache.org/guides/introduction/introduction-to-dependency-mechanism.html#Importing_Dependencies)
+            NOTE: You still need to define dependencies in your POM, but you can omit version as it's enforced by this dependencyManagement. NOTE: It defaults
+            to the latest version this SDK pom has been tested with, but alfresco version can/should be overridden in your project's pom -->
          <dependency>
             <groupId>${alfresco.groupId}</groupId>
             <artifactId>alfresco-platform-distribution</artifactId>
@@ -83,15 +98,7 @@
 
    <properties>
       <alfresco.version>5.1.d-EA</alfresco.version>
-      <app.war.location>${project.build.directory}/${webapp.id.name}.war</app.war.location>
-      <alfresco.base.version>${alfresco.version}</alfresco.base.version>
-
-      <!-- Database properties - default values to be overridden in settings.xml -->
-      <db.driver>org.postgresql.Driver</db.driver>
-      <db.url>jdbc:postgresql:${db.name}</db.url>
-      <db.master.url>jdbc:postgresql:template1</db.master.url>
-      <db.username>alfresco</db.username>
-      <db.password>alfresco</db.password>
+      <alfresco.rm.version>${project.version}</alfresco.rm.version>
 
       <!-- Maven specific build properties -->
       <maven.alfresco.includeDependencies>false</maven.alfresco.includeDependencies>
@@ -102,6 +109,7 @@
    </properties>
 
    <build>
+      <finalName>${project.artifactId}-${project.version}</finalName>
       <plugins>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -124,27 +132,35 @@
             </executions>
          </plugin>
          <plugin>
-            <groupId>org.alfresco.maven.plugin</groupId>
-            <artifactId>alfresco-maven-plugin</artifactId>
-            <extensions>true</extensions>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <version>${maven.buildhelper.version}</version>
+            <executions>
+               <execution>
+                  <id>add-test-source</id>
+                  <goals>
+                     <goal>add-test-source</goal>
+                  </goals>
+                  <configuration>
+                     <sources>
+                        <source>src/unit-test/java</source>
+                     </sources>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-               <backup>true</backup>
-               <ampLocation>${project.build.directory}/${project.build.finalName}-amp.amp</ampLocation>
-               <warLocation>${app.war.location}</warLocation>
-               <classifier>amp</classifier>
-               <attachClasses>true</attachClasses>
-               <includeDependencies>true</includeDependencies>
+               <includes>
+                  <include>**/*UnitTest.java</include>
+               </includes>
             </configuration>
          </plugin>
       </plugins>
-
-      <!-- Defining version and some configuration of Maven plugins -->
       <pluginManagement>
          <plugins>
-            <plugin>
-               <artifactId>maven-clean-plugin</artifactId>
-               <version>2.5</version>
-            </plugin>
             <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
@@ -166,134 +182,7 @@
                   </execution>
                </executions>
             </plugin>
-            <plugin>
-               <artifactId>maven-deploy-plugin</artifactId>
-               <version>2.8.1</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-install-plugin</artifactId>
-               <version>2.5.1</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-resources-plugin</artifactId>
-               <version>2.6</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-site-plugin</artifactId>
-               <version>3.3</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-assembly-plugin</artifactId>
-               <version>2.4</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-dependency-plugin</artifactId>
-               <version>2.8</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-help-plugin</artifactId>
-               <version>2.2</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-release-plugin</artifactId>
-               <version>2.4.2</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-source-plugin</artifactId>
-               <version>2.2.1</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-failsafe-plugin</artifactId>
-               <version>2.16</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-surefire-plugin</artifactId>
-               <version>2.16</version>
-               <configuration>
-                  <!-- To prevent tests alfresco.log to be created in project roots and bother while synchronizing with SCM -->
-                  <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                  <runOrder>alphabetical</runOrder>
-                  <systemPropertyVariables>
-                     <!-- Database related properties -->
-                     <db.url>${db.url}</db.url>
-                     <db.driver>${db.driver}</db.driver>
-                     <db.name>${db.name}</db.name>
-                     <db.username>${db.username}</db.username>
-                     <db.password>${db.password}</db.password>
-                     <dir.root>${basedir}/target/alf_test_data</dir.root>
-                  </systemPropertyVariables>
-               </configuration>
-            </plugin>
-            <plugin>
-               <artifactId>maven-javadoc-plugin</artifactId>
-               <version>2.9.1</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-eclipse-plugin</artifactId>
-               <version>2.9</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-antrun-plugin</artifactId>
-               <version>1.7</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-jar-plugin</artifactId>
-               <version>2.4</version>
-            </plugin>
-            <plugin>
-               <artifactId>maven-war-plugin</artifactId>
-               <version>2.4</version>
-               <configuration>
-                  <warSourceDirectory>source/web</warSourceDirectory>
-                  <useCache>true</useCache>
-               </configuration>
-            </plugin>
-            <plugin>
-               <groupId>org.mortbay.jetty</groupId>
-               <artifactId>jetty-maven-plugin</artifactId>
-               <version>8.1.14.v20131031</version>
-               <configuration>
-                  <webAppSourceDirectory>source/web</webAppSourceDirectory>
-               </configuration>
-            </plugin>
-            <plugin>
-               <groupId>org.apache.tomcat.maven</groupId>
-               <artifactId>tomcat7-maven-plugin</artifactId>
-               <version>2.2</version>
-               <dependencies>
-                  <dependency>
-                     <groupId>org.codehaus.plexus</groupId>
-                     <artifactId>plexus-archiver</artifactId>
-                     <version>2.3</version>
-                  </dependency>
-               </dependencies>
-            </plugin>
-            <plugin>
-               <groupId>org.codehaus.mojo</groupId>
-               <artifactId>sql-maven-plugin</artifactId>
-               <version>1.5</version>
-            </plugin>
-            <plugin>
-               <groupId>org.codehaus.mojo</groupId>
-               <artifactId>versions-maven-plugin</artifactId>
-               <version>2.1</version>
-            </plugin>
-            <plugin>
-               <groupId>org.codehaus.mojo</groupId>
-               <artifactId>build-helper-maven-plugin</artifactId>
-               <version>1.8</version>
-            </plugin>
-            <plugin>
-               <groupId>org.alfresco.maven.plugin</groupId>
-               <artifactId>alfresco-maven-plugin</artifactId>
-               <version>1.1.1</version>
-            </plugin>
-            <plugin>
-               <groupId>net.alchim31.maven</groupId>
-               <artifactId>yuicompressor-maven-plugin</artifactId>
-               <version>1.3.2</version>
-            </plugin>
-            <!-- This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
+            <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
             <plugin>
                <groupId>org.eclipse.m2e</groupId>
                <artifactId>lifecycle-mapping</artifactId>
