Fixed issue with the Aikau dependency. RM was not getting the declared dependency in the pom file but the one from Share.

--- a/rm-community/rm-share/pom.xml
+++ b/rm-community/rm-share/pom.xml
@@ -148,6 +148,7 @@
                   </goals>
                   <configuration>
                      <attachClasses>true</attachClasses>
+                     <includeDependencies>true</includeDependencies>
                   </configuration>
                </execution>
                <execution>
