--- a/.editorConfig
+++ b/.editorConfig
@@ -7,10 +7,9 @@ root = true
 # All files should use spaces.
 [*]
 indent_style = space
-
-# Just JS for now.
-[*.js]
-indent_size = 3
+end_of_line = crlf
 trim_trailing_whitespace = true
+indent_size = 3
 
-#TODO: css, xml, ftl, etc.
+[*.java]
+indent_size = 4
